tests/errors/runtime.SymbolNotFound.res
>> Runtime | File: runtime.SymbolNotFound.art
     error | Line: 2
           | 
           | symbol not found: y
           | perhaps you meant... x ?
           |                or... or ?
           |                or... as ?